Implemented #define and #undef

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -1,5 +1,5 @@
 
-OBJS = util.o mem_pool.o buffer.o string_tab.o input.o ast.o token.o preprocessor.o program.o
+OBJS = util.o mem_pool.o buffer.o hashtable.o string_tab.o input.o ast.o token.o preprocessor.o program.o
 
 libspork.a: $(OBJS)
 	$(AR) $@ $(OBJS)
