--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -1,7 +1,7 @@
 
 OBJS = util.o mem_pool.o buffer.o hashtable.o id_hashtable.o \
-       string_tab.o input.o ast.o token.o token_list.o pp_macro.o \
-       pp_phase123.o preprocessor.o program.o old_input.o
+       string_tab.o input.o ast.o pp_token.o pp_token_list.o pp_macro.o \
+       pp_phase123.o pp_phase4.o preprocessor.o program.o
 
 libspork.a: $(OBJS)
 	$(AR) $@ $(OBJS)
