Preprocessor phases 5 and 6

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -1,8 +1,8 @@
 
 OBJS = util.o mem_pool.o buffer.o hashtable.o id_hashtable.o \
-       string_tab.o input.o ast.o pp_token.o pp_token_list.o \
+       string_tab.o input.o ast.o punct.o pp_token.o pp_token_list.o \
        pp_macro.o pp_directives.o pp_phase123.o pp_phase4.o \
-       preprocessor.o program.o
+       pp_phase56.o preprocessor.o token.o program.o
 
 libspork.a: $(OBJS)
 	$(AR) $@ $(OBJS)
